--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -1,94 +1,138 @@
-*{
+*,
+html {
     padding: 0px;
     margin: 0px;
-    font-family: 'Bebas Neue', sans-serif;
     font-family: 'Caprasimo', cursive;
-    color: rgb(239, 242, 245);
-   
 }
 
-.logo1{
-    display: contents;
-    margin-top: 17px;
-    height: 0;
-    
-
-}
-
-header{
-    margin: 0;
-    padding: 0px;
-    display:inline;
-}
-
-.container{
-    display: flex;
-    justify-content:space-between;
-    margin: 0;
-    width: 100%;
-}
-
-a{
-  
-    padding: 5px;
-    margin: 5px;
-    border: 2px solid peru;
-    height: 30px;
-    text-decoration: none;
-}
-#logo{
-    margin: 5px;
-    padding: 5px;
-    font-size: 10px 10px 10px 0;
-    color: rgb(201, 125, 54);
-    font-weight:  lighter;
-   
-}
-.slogan-container{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    padding: 10px;;
-    height: 200px;
-    width: 100%;
-  
-    
-}
-
-
-.intro1{
-   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-body{
-    margin: 0;
-    background-image: url("Education_photo.jpg");
+body {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("assets/Education_photo.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.item-container{
+.container {
     display: flex;
-    margin-top: 0;
-    align-content: center;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
+}
+
+/* Styling the Navbar of the Application*/
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+#logo {
+    text-decoration: none;
+    margin: 5px;
+    padding: 5px;
+    font-size: 10px 10px 10px 0;
+    color: rgb(218, 172, 129);
+    border: 2px solid rgb(18, 124, 18);
+}
+
+.navbar-links {
+    display: flex;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-}
-.homeimg{
-    margin: 05px;
-    padding: 10px;
+    gap: 10px;
 }
 
-#img1{
-    width: 300px;
-    
-    
+.navbar-links a {
+    padding: 0.3rem;
+    color: rgb(218, 172, 129);
+    border: 2px solid rgb(18, 124, 18);
+    text-decoration: none;
 }
 
+/* Styling the Main Container*/
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 1.5rem;
+}
+
+.slogan-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #eddc64;
+}
+
+.Intro {
+    align-self: start;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 20px;
+    padding: 1rem;
+}
+
+.section .Intro h3 {
+    color: rgb(255, 251, 0);
+}
+
+.section .content {
+    font-weight: normal;
+    text-wrap: pretty;
+    color: white;
+}
+
+.Trust-container {
+    text-align: center;
+    font-weight: 100;
+    font: 1em sans-serif;
+    color: #ffff00c2;
+}
+
+/*Styling the Footer */
+.footer-Container {
+    display: flex;
+    flex-direction: column;
+    background: #a77b7b7d;
+}
+
+.About-container {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.random-image {
+    padding: 1rem;
+}
+
+.random-image #about-img {
+    width: auto;
+    height: 188px;
+}
+
+.About-info {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 500px;
+}
+
+.About-info h3 {
+    text-align: center;
+    color: yellow;
+}
