--- a/frontend/homepage/stylesheet.css
+++ b/frontend/homepage/stylesheet.css
@@ -23,6 +23,7 @@ body {
 /* Styling the Navbar of the Application*/
 
 .navbar {
+    margin: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,12 +31,18 @@ body {
 }
 
 #logo {
+    background-color: ivory;
     text-decoration: none;
     margin: 5px;
     padding: 5px;
     font-size: 10px 10px 10px 0;
-    color: rgb(218, 172, 129);
-    border: 2px solid rgb(18, 124, 18);
+    color: rgb(75, 0, 130);
+    border: 2px solid maroon;
+}
+
+#logo:hover {
+    background-color: chocolate;
+    color: white;
 }
 
 .navbar-links {
@@ -48,14 +55,21 @@ body {
 
 .navbar-links a {
     padding: 0.3rem;
-    color: rgb(218, 172, 129);
-    border: 2px solid rgb(18, 124, 18);
+    color: rgb(75, 0, 130);
     text-decoration: none;
+}
+
+.navbar-links a:hover {
+    background-color: chocolate;
+    color: white;
+    border: 2px solid maroon;
+    border-radius: 1rem;
 }
 
 /* Styling the Main Container*/
 
 .main-container {
+
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -63,10 +77,11 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-top: 1.5rem;
+    margin-top: 2.5rem;
 }
 
 .slogan-container {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,11 +97,12 @@ body {
     flex-direction: column;
     justify-content: space-around;
     gap: 20px;
-    padding: 1rem;
+    padding: 3rem;
 }
 
 .section .Intro h3 {
-    color: rgb(255, 251, 0);
+
+    color: rgb(178, 34, 34);
 }
 
 .section .content {
@@ -96,10 +112,11 @@ body {
 }
 
 .Trust-container {
+    margin: 30px 0 30px 0;
     text-align: center;
     font-weight: 100;
     font: 1em sans-serif;
-    color: #ffff00c2;
+    color: rgb(178, 34, 34);
 }
 
 /*Styling the Footer */
@@ -121,7 +138,7 @@ body {
 
 .random-image #about-img {
     width: auto;
-    height: 188px;
+    height: 150px;
 }
 
 .About-info {
